--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,12 +4,21 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "hello",
+	"name": "email-notification",
 	"main": "src/index.ts",
 	"compatibility_date": "2025-09-02",
+	"compatibility_flags": [
+		"nodejs_compat"
+	],
 	"observability": {
 		"enabled": true
-	}
+	},
+  "send_email": [
+    {
+      "name": "sendEmail"
+    }
+	],
+
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
