test: generic use invokeWorker helper

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,6 +43,6 @@
 		"skipLibCheck": true,
 		"types": ["./worker-configuration.d.ts"]
 	},
-	"exclude": ["test"],
+	"exclude": ["src/test"],
 	"include": ["worker-configuration.d.ts", "src/**/*.ts"]
 }
