--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@cloudflare/vitest-pool-workers": "^0.8.19",
 		"@types/lodash-es": "^4.17.12",
 		"typescript": "^5.5.2",
+		"vite-tsconfig-paths": "^5.1.4",
 		"vitest": "~3.2.0",
 		"wrangler": "^4.33.1"
 	},
