--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@biomejs/biome": "^2.2.3",
 		"@cloudflare/vitest-pool-workers": "^0.8.19",
 		"@types/lodash-es": "^4.17.12",
+		"@types/pluralize": "^0.0.33",
 		"typescript": "^5.5.2",
 		"vite-tsconfig-paths": "^5.1.4",
 		"vitest": "~3.2.0",
@@ -22,6 +23,7 @@
 	"dependencies": {
 		"lodash-es": "^4.17.21",
 		"mimetext": "^3.0.27",
+		"pluralize": "^8.0.0",
 		"tiny-invariant": "^1.3.3"
 	}
 }
