--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@biomejs/biome": "^2.2.3",
 		"@cloudflare/vitest-pool-workers": "^0.8.19",
 		"@types/lodash-es": "^4.17.12",
+		"@types/node": "^24.7.2",
 		"@types/pluralize": "^0.0.33",
 		"typescript": "^5.5.2",
 		"vite-tsconfig-paths": "^5.1.4",
