--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"start": "wrangler dev",
 		"deploy": "wrangler deploy",
 		"test": "vitest",
+		"test:watch": "vitest watch",
 		"lint": "biome check --fix",
 		"lint:ci": "biome ci --reporter=github",
 		"types": "wrangler types"
