--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
 		/* Visit https://aka.ms/tsconfig.json to read more about this file */
 		"baseUrl": ".",
 		"paths": {
-			"#/*": ["src/*"],
-			"#root/*": ["./*"]
+			"~/*": ["src/*"],
+			"~~/*": ["./*"]
 		},
 
 		/* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
